--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,18 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
+# Node.js/React-specific files
+/client/node_modules
+/client/build
+/client/.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Pyre type checker
 .pyre/
 
